--- a/Papsi-Coklatt/Papsi-Coklatt/Papsi-Coklatt.vbproj
+++ b/Papsi-Coklatt/Papsi-Coklatt/Papsi-Coklatt.vbproj
@@ -83,6 +83,18 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form2.Designer.vb">
+      <DependentUpon>Form2.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form2.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.vb">
+      <DependentUpon>Form3.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form3.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Marketing.Designer.vb">
       <DependentUpon>Marketing.vb</DependentUpon>
     </Compile>
@@ -108,6 +120,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form3.resx">
+      <DependentUpon>Form3.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Marketing.resx">
       <DependentUpon>Marketing.vb</DependentUpon>
     </EmbeddedResource>
