Indra, Tantra koding Warehouse

--- a/Papsi-Coklatt/Papsi-Coklatt/Papsi-Coklatt.vbproj
+++ b/Papsi-Coklatt/Papsi-Coklatt/Papsi-Coklatt.vbproj
@@ -108,6 +108,12 @@
     <Compile Include="Marketing.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Warehouse.Designer.vb">
+      <DependentUpon>Warehouse.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Warehouse.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Koneksi.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -145,6 +151,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Warehouse.resx">
+      <DependentUpon>Warehouse.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
